--- a/eula.html
+++ b/eula.html
@@ -1,1 +1,136 @@
-<h1>شروط الاستخدام</h1><p>النص هنا...</p>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>شروط الاستخدام - دفتر المتابعة</title>
+    <style>
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        margin: 40px auto;
+        max-width: 900px;
+        line-height: 1.8;
+        color: #222;
+        background-color: #f9f9f9;
+        padding: 20px;
+      }
+      h1,
+      h2 {
+        color: #042867;
+      }
+      .section {
+        background: #fff;
+        padding: 20px 25px;
+        margin-bottom: 20px;
+        border-radius: 12px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
+      }
+      p {
+        margin: 12px 0;
+      }
+      a {
+        color: #0d6efd;
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+      .lang-toggle {
+        text-align: left;
+        margin-bottom: 20px;
+      }
+      .lang-toggle button {
+        padding: 6px 12px;
+        margin-left: 5px;
+        border: none;
+        border-radius: 6px;
+        background-color: #042867;
+        color: #fff;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="lang-toggle">
+      <button onclick="switchLang('ar')">العربية</button>
+      <button onclick="switchLang('en')">English</button>
+    </div>
+
+    <!-- Arabic Version -->
+    <div id="ar" class="section">
+      <h1>شروط الاستخدام</h1>
+      <p>
+        باستخدامك لتطبيق <strong>دفتر المتابعة</strong> فإنك توافق على الالتزام
+        بالشروط والأحكام التالية:
+      </p>
+      <h2>الترخيص</h2>
+      <p>
+        نمنحك ترخيصًا محدودًا، غير حصري، وغير قابل للتحويل لاستخدام التطبيق
+        لأغراض شخصية أو تعليمية فقط.
+      </p>
+      <h2>المحتوى والاشتراكات</h2>
+      <p>
+        بعض الميزات أو المحتوى متاح فقط من خلال اشتراك مدفوع. يتم تجديد
+        الاشتراكات تلقائيًا ما لم يتم إلغاؤها من إعدادات حساب Apple ID قبل 24
+        ساعة من نهاية الفترة الحالية.
+      </p>
+      <h2>المسؤولية</h2>
+      <p>
+        لا نتحمل أي مسؤولية عن أي خسائر مباشرة أو غير مباشرة تنشأ عن استخدام
+        التطبيق. استخدامك للتطبيق يكون على مسؤوليتك الخاصة.
+      </p>
+      <h2>التعديلات</h2>
+      <p>
+        نحتفظ بحق تعديل هذه الشروط في أي وقت. سيتم إخطارك عند إجراء تغييرات
+        جوهرية.
+      </p>
+      <p>
+        للاستفسارات، يرجى التواصل عبر البريد:
+        <a href="mailto:youremail@example.com">youremail@example.com</a>
+      </p>
+    </div>
+
+    <!-- English Version -->
+    <div id="en" class="section" style="display: none" dir="ltr" lang="en">
+      <h1>End User License Agreement (EULA)</h1>
+      <p>
+        By using <strong>Daftar Al-Mutabaah</strong> app, you agree to comply
+        with the following terms and conditions:
+      </p>
+      <h2>License</h2>
+      <p>
+        We grant you a limited, non-exclusive, non-transferable license to use
+        the app for personal or educational purposes only.
+      </p>
+      <h2>Content & Subscriptions</h2>
+      <p>
+        Some features or content are available only through a paid subscription.
+        Subscriptions automatically renew unless canceled in Apple ID settings
+        at least 24 hours before the current period ends.
+      </p>
+      <h2>Liability</h2>
+      <p>
+        We are not responsible for any direct or indirect losses arising from
+        the use of the app. You use the app at your own risk.
+      </p>
+      <h2>Modifications</h2>
+      <p>
+        We reserve the right to modify these terms at any time. You will be
+        notified in case of significant changes.
+      </p>
+      <p>
+        For inquiries, please contact us at:
+        <a href="mailto:youremail@example.com">youremail@example.com</a>
+      </p>
+    </div>
+
+    <script>
+      function switchLang(lang) {
+        document.getElementById("ar").style.display =
+          lang === "ar" ? "block" : "none";
+        document.getElementById("en").style.display =
+          lang === "en" ? "block" : "none";
+      }
+    </script>
+  </body>
+</html>
