--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-<h1>دفتر المتابعة</h1><p>مرحبًا بك في صفحات الدعم الخاصة بالتطبيق.</p>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>دفتر المتابعة - الصفحات القانونية</title>
+    <style>
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        margin: 40px auto;
+        max-width: 900px;
+        line-height: 1.8;
+        color: #222;
+        background-color: #f9f9f9;
+        padding: 20px;
+        text-align: center;
+      }
+      h1 {
+        color: #042867;
+        margin-bottom: 20px;
+      }
+      p {
+        margin-bottom: 25px;
+      }
+      .links {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        align-items: center;
+      }
+      a {
+        display: inline-block;
+        background-color: #042867;
+        color: #fff;
+        padding: 12px 20px;
+        border-radius: 8px;
+        text-decoration: none;
+        font-size: 16px;
+        transition: background-color 0.3s ease;
+        width: 250px;
+        text-align: center;
+      }
+      a:hover {
+        background-color: #0d6efd;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>دفتر المتابعة</h1>
+    <p>
+      مرحبًا بك في الصفحات القانونية الخاصة بتطبيق دفتر المتابعة. يمكنك الوصول
+      إلى سياسة الخصوصية وشروط الاستخدام عبر الروابط أدناه:
+    </p>
+
+    <div class="links">
+      <a href="privacy-policy.html">📜 سياسة الخصوصية</a>
+      <a href="eula.html">⚖️ شروط الاستخدام</a>
+    </div>
+  </body>
+</html>
