uploud video to 5 gb

--- a/eula.html
+++ b/eula.html
@@ -86,7 +86,7 @@
       </p>
       <p>
         للاستفسارات، يرجى التواصل عبر البريد:
-        <a href="mailto:youremail@example.com">youremail@example.com</a>
+        <a href="mailto:hadionline1994@gmail.com">hadionline1994@gmail.com</a>
       </p>
     </div>
 
@@ -120,7 +120,7 @@
       </p>
       <p>
         For inquiries, please contact us at:
-        <a href="mailto:youremail@example.com">youremail@example.com</a>
+        <a href="mailto:hadionline1994@gmail.com">hadionline1994@gmail.com</a>
       </p>
     </div>
 
