--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -75,7 +75,7 @@
       </p>
       <p>
         للاستفسارات، يمكن التواصل عبر البريد:
-        <a href="mailto:youremail@example.com">youremail@example.com</a>
+        <a href="mailto:hadionline1994@gmail.com">hadionline1994@gmail.com</a>
       </p>
     </div>
 
@@ -99,7 +99,7 @@
       </p>
       <p>
         For inquiries, please contact us at:
-        <a href="mailto:youremail@example.com">youremail@example.com</a>
+        <a href="mailto:hadionline1994@gmail.com">hadionline1994@gmail.com</a>
       </p>
     </div>
 
