--- a/eula.html
+++ b/eula.html
@@ -4,133 +4,144 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>شروط الاستخدام - دفتر المتابعة</title>
+
+    <!-- Tailwind -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Tajawal Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap"
+      rel="stylesheet"
+    />
+
     <style>
       body {
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        margin: 40px auto;
-        max-width: 900px;
-        line-height: 1.8;
-        color: #222;
-        background-color: #f9f9f9;
-        padding: 20px;
-      }
-      h1,
-      h2 {
-        color: #042867;
-      }
-      .section {
-        background: #fff;
-        padding: 20px 25px;
-        margin-bottom: 20px;
-        border-radius: 12px;
-        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
-      }
-      p {
-        margin: 12px 0;
-      }
-      a {
-        color: #0d6efd;
-        text-decoration: none;
-      }
-      a:hover {
-        text-decoration: underline;
-      }
-      .lang-toggle {
-        text-align: left;
-        margin-bottom: 20px;
-      }
-      .lang-toggle button {
-        padding: 6px 12px;
-        margin-left: 5px;
-        border: none;
-        border-radius: 6px;
-        background-color: #042867;
-        color: #fff;
-        cursor: pointer;
+        font-family: "Tajawal", sans-serif;
       }
     </style>
   </head>
-  <body>
-    <div class="lang-toggle">
-      <button onclick="switchLang('ar')">العربية</button>
-      <button onclick="switchLang('en')">English</button>
-    </div>
+  <body
+    class="bg-gradient-to-br from-blue-50 via-white to-indigo-50 min-h-screen flex flex-col"
+  >
+    <!-- الهيدر -->
+    <header
+      class="bg-gradient-to-r from-blue-700 to-indigo-800 text-white py-10 shadow-lg text-center"
+    >
+      <h1 class="text-3xl md:text-4xl font-extrabold">📖 شروط الاستخدام</h1>
+      <p class="opacity-80 mt-2">
+        مرحبًا بك في الصفحات القانونية الخاصة بـ دفتر المتابعة
+      </p>
+    </header>
 
-    <!-- Arabic Version -->
-    <div id="ar" class="section">
-      <h1>شروط الاستخدام</h1>
-      <p>
-        باستخدامك لتطبيق <strong>دفتر المتابعة</strong> فإنك توافق على الالتزام
-        بالشروط والأحكام التالية:
-      </p>
-      <h2>الترخيص</h2>
-      <p>
-        نمنحك ترخيصًا محدودًا، غير حصري، وغير قابل للتحويل لاستخدام التطبيق
-        لأغراض شخصية أو تعليمية فقط.
-      </p>
-      <h2>المحتوى والاشتراكات</h2>
-      <p>
-        بعض الميزات أو المحتوى متاح فقط من خلال اشتراك مدفوع. يتم تجديد
-        الاشتراكات تلقائيًا ما لم يتم إلغاؤها من إعدادات حساب Apple ID قبل 24
-        ساعة من نهاية الفترة الحالية.
-      </p>
-      <h2>المسؤولية</h2>
-      <p>
-        لا نتحمل أي مسؤولية عن أي خسائر مباشرة أو غير مباشرة تنشأ عن استخدام
-        التطبيق. استخدامك للتطبيق يكون على مسؤوليتك الخاصة.
-      </p>
-      <h2>التعديلات</h2>
-      <p>
-        نحتفظ بحق تعديل هذه الشروط في أي وقت. سيتم إخطارك عند إجراء تغييرات
-        جوهرية.
-      </p>
-      <p>
-        للاستفسارات، يرجى التواصل عبر البريد:
-        <a href="mailto:hadionline1994@gmail.com">hadionline1994@gmail.com</a>
-      </p>
-    </div>
+    <!-- محتوى الصفحة -->
+    <main class="container mx-auto px-6 py-12 flex-1" x-data="{lang: 'ar'}">
+      <!-- أزرار اللغة -->
+      <div class="flex justify-center gap-4 mb-8">
+        <button
+          @click="lang = 'ar'"
+          class="px-4 py-2 rounded-lg text-white bg-blue-700 hover:bg-blue-800 transition"
+          :class="{'opacity-50': lang !== 'ar'}"
+        >
+          العربية
+        </button>
+        <button
+          @click="lang = 'en'"
+          class="px-4 py-2 rounded-lg text-white bg-indigo-600 hover:bg-indigo-700 transition"
+          :class="{'opacity-50': lang !== 'en'}"
+        >
+          English
+        </button>
+      </div>
 
-    <!-- English Version -->
-    <div id="en" class="section" style="display: none" dir="ltr" lang="en">
-      <h1>End User License Agreement (EULA)</h1>
-      <p>
-        By using <strong>Daftar Al-Mutabaah</strong> app, you agree to comply
-        with the following terms and conditions:
-      </p>
-      <h2>License</h2>
-      <p>
-        We grant you a limited, non-exclusive, non-transferable license to use
-        the app for personal or educational purposes only.
-      </p>
-      <h2>Content & Subscriptions</h2>
-      <p>
-        Some features or content are available only through a paid subscription.
-        Subscriptions automatically renew unless canceled in Apple ID settings
-        at least 24 hours before the current period ends.
-      </p>
-      <h2>Liability</h2>
-      <p>
-        We are not responsible for any direct or indirect losses arising from
-        the use of the app. You use the app at your own risk.
-      </p>
-      <h2>Modifications</h2>
-      <p>
-        We reserve the right to modify these terms at any time. You will be
-        notified in case of significant changes.
-      </p>
-      <p>
-        For inquiries, please contact us at:
-        <a href="mailto:hadionline1994@gmail.com">hadionline1994@gmail.com</a>
-      </p>
-    </div>
+      <!-- النسخة العربية -->
+      <div x-show="lang === 'ar'" class="space-y-6">
+        <div class="bg-white rounded-2xl shadow-lg p-6 text-right">
+          <h2 class="text-xl font-bold text-blue-800 mb-3">الترخيص</h2>
+          <p>
+            نمنحك ترخيصًا محدودًا، غير حصري، وغير قابل للتحويل لاستخدام التطبيق
+            لأغراض شخصية أو تعليمية فقط.
+          </p>
+        </div>
+        <div class="bg-white rounded-2xl shadow-lg p-6 text-right">
+          <h2 class="text-xl font-bold text-blue-800 mb-3">
+            المحتوى والاشتراكات
+          </h2>
+          <p>
+            بعض الميزات أو المحتوى متاح فقط من خلال اشتراك مدفوع. يتم تجديد
+            الاشتراكات تلقائيًا ما لم يتم إلغاؤها من إعدادات Apple ID قبل 24
+            ساعة من نهاية الفترة الحالية.
+          </p>
+        </div>
+        <div class="bg-white rounded-2xl shadow-lg p-6 text-right">
+          <h2 class="text-xl font-bold text-blue-800 mb-3">المسؤولية</h2>
+          <p>
+            لا نتحمل أي مسؤولية عن أي خسائر مباشرة أو غير مباشرة تنشأ عن استخدام
+            التطبيق. استخدامك للتطبيق يكون على مسؤوليتك الخاصة.
+          </p>
+        </div>
+        <div class="bg-white rounded-2xl shadow-lg p-6 text-right">
+          <h2 class="text-xl font-bold text-blue-800 mb-3">التعديلات</h2>
+          <p>
+            نحتفظ بحق تعديل هذه الشروط في أي وقت. سيتم إخطارك عند إجراء تغييرات
+            جوهرية.
+          </p>
+        </div>
+      </div>
 
-    <script>
-      function switchLang(lang) {
-        document.getElementById("ar").style.display =
-          lang === "ar" ? "block" : "none";
-        document.getElementById("en").style.display =
-          lang === "en" ? "block" : "none";
-      }
-    </script>
+      <!-- النسخة الإنجليزية -->
+      <div x-show="lang === 'en'" dir="ltr" class="space-y-6">
+        <div class="bg-white rounded-2xl shadow-lg p-6">
+          <h2 class="text-xl font-bold text-indigo-800 mb-3">License</h2>
+          <p>
+            We grant you a limited, non-exclusive, non-transferable license to
+            use the app for personal or educational purposes only.
+          </p>
+        </div>
+        <div class="bg-white rounded-2xl shadow-lg p-6">
+          <h2 class="text-xl font-bold text-indigo-800 mb-3">
+            Content & Subscriptions
+          </h2>
+          <p>
+            Some features or content are available only through a paid
+            subscription. Subscriptions automatically renew unless canceled in
+            Apple ID settings at least 24 hours before the current period ends.
+          </p>
+        </div>
+        <div class="bg-white rounded-2xl shadow-lg p-6">
+          <h2 class="text-xl font-bold text-indigo-800 mb-3">Liability</h2>
+          <p>
+            We are not responsible for any direct or indirect losses arising
+            from the use of the app. You use the app at your own risk.
+          </p>
+        </div>
+        <div class="bg-white rounded-2xl shadow-lg p-6">
+          <h2 class="text-xl font-bold text-indigo-800 mb-3">Modifications</h2>
+          <p>
+            We reserve the right to modify these terms at any time. You will be
+            notified in case of significant changes.
+          </p>
+        </div>
+      </div>
+
+      <!-- زر العودة -->
+      <div class="text-center mt-12">
+        <a
+          href="index.html"
+          class="inline-block px-6 py-3 rounded-xl bg-gradient-to-r from-blue-600 to-indigo-700 text-white font-bold shadow-lg hover:scale-105 transition"
+        >
+          ⬅️ العودة للصفحة الرئيسية
+        </a>
+      </div>
+    </main>
+
+    <!-- الفوتر -->
+    <footer class="bg-gray-100 py-6 text-center text-gray-500 text-sm">
+      <p>© 2025 دفتر المتابعة. جميع الحقوق محفوظة.</p>
+    </footer>
+
+    <!-- AlpineJS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+      defer
+    ></script>
   </body>
 </html>
