--- a/index.html
+++ b/index.html
@@ -3,58 +3,243 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>دفتر المتابعة - الصفحات القانونية</title>
-    <style>
-      body {
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        margin: 40px auto;
-        max-width: 900px;
-        line-height: 1.8;
-        color: #222;
-        background-color: #f9f9f9;
-        padding: 20px;
-        text-align: center;
-      }
-      h1 {
-        color: #042867;
-        margin-bottom: 20px;
-      }
-      p {
-        margin-bottom: 25px;
-      }
-      .links {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        align-items: center;
-      }
-      a {
-        display: inline-block;
-        background-color: #042867;
-        color: #fff;
-        padding: 12px 20px;
-        border-radius: 8px;
-        text-decoration: none;
-        font-size: 16px;
-        transition: background-color 0.3s ease;
-        width: 250px;
-        text-align: center;
-      }
-      a:hover {
-        background-color: #0d6efd;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>دفتر المتابعة</h1>
-    <p>
-      مرحبًا بك في الصفحات القانونية الخاصة بتطبيق دفتر المتابعة. يمكنك الوصول
-      إلى سياسة الخصوصية وشروط الاستخدام عبر الروابط أدناه:
-    </p>
+    <title>دفتر المتابعة - تطبيق المعلم الذكي</title>
 
-    <div class="links">
-      <a href="privacy-policy.html">📜 سياسة الخصوصية</a>
-      <a href="eula.html">⚖️ شروط الاستخدام</a>
-    </div>
+    <!-- Tailwind -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!-- AlpineJS -->
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body
+    class="bg-gray-50 text-gray-800 font-[Tajawal]"
+    x-data="{ show: false }"
+    x-init="setTimeout(()=>show=true, 300)"
+  >
+    <!-- هيدر -->
+    <header
+      class="relative bg-gradient-to-br from-blue-800 via-indigo-800 to-purple-900 text-white overflow-hidden"
+      x-data="{show:false}"
+      x-init="setTimeout(()=>show=true,300)"
+    >
+      <!-- تأثيرات خلفية -->
+      <div class="absolute inset-0">
+        <div
+          class="absolute top-[-100px] left-[-100px] w-96 h-96 bg-blue-500/30 rounded-full blur-3xl animate-pulse"
+        ></div>
+        <div
+          class="absolute bottom-[-120px] right-[-80px] w-80 h-80 bg-indigo-400/20 rounded-full blur-2xl animate-ping"
+        ></div>
+        <div
+          class="absolute top-1/3 left-1/2 w-72 h-72 bg-purple-500/10 rounded-full blur-3xl animate-bounce"
+        ></div>
+      </div>
+
+      <!-- المحتوى -->
+      <div class="relative z-10 container mx-auto text-center px-6 py-24">
+        <!-- أيقونة التطبيق -->
+        <div
+          class="relative inline-block mb-6"
+          x-show="show"
+          x-transition.scale.duration.1000
+        >
+          <div
+            class="absolute inset-0 bg-gradient-to-tr from-blue-400 to-indigo-500 rounded-3xl blur-xl opacity-70 animate-pulse"
+          ></div>
+          <img
+            src="icon.png"
+            alt="شعار التطبيق"
+            class="relative mx-auto w-28 h-28 rounded-3xl shadow-2xl border-4 border-white/20"
+          />
+        </div>
+
+        <!-- العنوان -->
+        <h1
+          class="text-4xl md:text-6xl font-extrabold tracking-tight mb-4 drop-shadow-lg"
+          x-show="show"
+          x-transition.opacity.duration.1200
+        >
+          دفتر المتابعة
+        </h1>
+
+        <!-- الوصف -->
+        <p
+          class="text-lg md:text-xl text-white/90 max-w-2xl mx-auto leading-relaxed"
+          x-show="show"
+          x-transition.opacity.duration.1500
+        >
+          ✨ التطبيق الذكي للمعلمين لإدارة الفصول والدرجات بسهولة، تنظيم سلس،
+          وتجربة متطورة تدعم الإبداع والتفوق
+        </p>
+
+        <!-- زر CTA -->
+        <div class="mt-10" x-show="show" x-transition.opacity.duration.1800>
+          <a
+            href="#download"
+            class="inline-block px-8 py-4 rounded-xl bg-gradient-to-r from-blue-500 to-indigo-600 text-lg font-bold shadow-xl hover:scale-105 transform transition"
+          >
+            جرّبه الآن 🚀
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <!-- صور التطبيق -->
+    <section
+      class="relative bg-gradient-to-br from-blue-50 via-white to-indigo-50 py-24 text-center"
+      x-data="{show:false}"
+      x-init="setTimeout(()=>show=true,300)"
+    >
+      <!-- خلفية زخرفية ناعمة -->
+      <div class="absolute inset-0">
+        <div
+          class="absolute top-[-60px] left-[-60px] w-72 h-72 bg-blue-400/10 rounded-full blur-3xl"
+        ></div>
+        <div
+          class="absolute bottom-[-80px] right-[-80px] w-96 h-96 bg-indigo-500/10 rounded-full blur-3xl"
+        ></div>
+      </div>
+
+      <!-- المحتوى -->
+      <div class="relative z-10 container mx-auto px-6">
+        <!-- العنوان -->
+        <h2
+          class="text-3xl md:text-4xl font-extrabold text-gray-900 mb-6 drop-shadow-sm"
+          x-show="show"
+          x-transition.opacity.duration.1000
+        >
+          📱 لقطات من التطبيق
+        </h2>
+        <p
+          class="text-gray-600 mb-14 max-w-2xl mx-auto text-lg md:text-xl leading-relaxed"
+          x-show="show"
+          x-transition.opacity.duration.1200
+        >
+          استعرض جمال واجهات
+          <span class="text-blue-700 font-semibold">دفتر المتابعة</span>
+          عبر أجهزة آيفون وآيباد مع تجربة بصرية سلسة ومنسقة
+        </p>
+
+        <!-- شبكة الصور -->
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
+          <!-- العمود الأول: صورتين فوق بعض -->
+          <div class="flex flex-col gap-12">
+            <!-- صورة الأيقونات -->
+            <div
+              class="bg-white rounded-3xl shadow-xl p-5 border border-gray-100"
+              x-show="show"
+              x-transition:enter="transition transform duration-1000"
+              x-transition:enter-start="opacity-0 -translate-y-10 scale-90"
+              x-transition:enter-end="opacity-100 translate-y-0 scale-100"
+            >
+              <img
+                src="view_iphone.png"
+                alt="صورة الأيقونات"
+                class="rounded-xl mx-auto shadow-md"
+              />
+            </div>
+
+            <!-- صورة الآيباد -->
+            <div
+              class="bg-white rounded-3xl shadow-xl p-5 border border-gray-100"
+              x-show="show"
+              x-transition:enter="transition transform duration-1000 delay-300"
+              x-transition:enter-start="opacity-0 translate-x-10 scale-90"
+              x-transition:enter-end="opacity-100 translate-x-0 scale-100"
+            >
+              <img
+                src="ipad.png"
+                alt="صورة الآيباد"
+                class="rounded-xl mx-auto shadow-md"
+              />
+            </div>
+          </div>
+
+          <!-- العمود الثاني: صورة الآيفون -->
+          <div
+            class="bg-white rounded-3xl shadow-2xl p-6 border border-gray-100 md:scale-105 md:z-10"
+            x-show="show"
+            x-transition:enter="transition transform duration-1000 delay-500"
+            x-transition:enter-start="opacity-0 translate-y-10 scale-75"
+            x-transition:enter-end="opacity-100 translate-y-0 scale-100"
+          >
+            <img
+              src="iphone.png"
+              alt="صورة الآيفون"
+              class="rounded-xl mx-auto shadow-lg"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- زر التنزيل -->
+    <section
+      class="relative bg-gradient-to-r from-blue-600 to-indigo-700 py-24 text-center text-white overflow-hidden"
+      x-data="{show:false}"
+      x-init="setTimeout(()=>show=true,300)"
+    >
+      <!-- خلفية متحركة -->
+      <div class="absolute inset-0">
+        <div
+          class="absolute w-96 h-96 bg-white/10 rounded-full blur-3xl top-[-100px] left-[-100px] animate-pulse"
+        ></div>
+        <div
+          class="absolute w-72 h-72 bg-indigo-400/20 rounded-full blur-2xl bottom-[-80px] right-[-80px] animate-ping"
+        ></div>
+      </div>
+
+      <!-- المحتوى -->
+      <div class="relative z-10 container mx-auto px-6">
+        <h2
+          class="text-3xl md:text-4xl font-extrabold mb-4"
+          x-show="show"
+          x-transition.opacity.duration.1000
+        >
+          نزّل التطبيق الآن وابدأ رحلتك 🚀
+        </h2>
+        <p
+          class="text-lg text-white/80 mb-10 max-w-2xl mx-auto"
+          x-show="show"
+          x-transition.opacity.duration.1200
+        >
+          احصل على دفتر المتابعة لتجربة تعليمية أسهل، أسرع، وأكثر تنظيمًا. كل
+          شيء في مكان واحد.
+        </p>
+
+        <!-- زر التنزيل -->
+        <a
+          href="https://apps.apple.com/app/idYOUR_APP_ID"
+          class="inline-block transform hover:scale-105 transition duration-300"
+          x-show="show"
+          x-transition.scale.duration.1000.delay-300
+        >
+          <img
+            src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg"
+            alt="Download on App Store"
+            class="mx-auto w-48 md:w-56"
+          />
+        </a>
+      </div>
+      <p class="mt-5">© 2025 دفتر المتابعة. جميع الحقوق محفوظة.</p>
+
+      <!-- روابط السياسة -->
+      <div class="mt-6 flex justify-center gap-8 text-sm">
+        <a href="privacy-policy.html" class="underline hover:text-gray-200"
+          >سياسة الخصوصية</a
+        >
+        <a href="eula.html" class="underline hover:text-gray-200"
+          >شروط الاستخدام</a
+        >
+      </div>
+    </section>
   </body>
 </html>
