--- a/index.html
+++ b/index.html
@@ -231,19 +231,14 @@
       </div>
       <p class="mt-5">© 2025 دفتر المتابعة. جميع الحقوق محفوظة.</p>
 
+      <!-- روابط السياسة -->
       <div class="mt-6 flex justify-center gap-8 text-sm">
-        <a
-          href="https://mutabaah.app/privacy-policy.html"
-          class="underline hover:text-gray-200"
+        <a href="/privacy-policy.html" class="underline hover:text-gray-200"
+          >سياسة الخصوصية</a
         >
-          سياسة الخصوصية
-        </a>
-        <a
-          href="https://mutabaah.app/eula.html"
-          class="underline hover:text-gray-200"
+        <a href="/eula.html" class="underline hover:text-gray-200"
+          >شروط الاستخدام</a
         >
-          شروط الاستخدام
-        </a>
       </div>
     </section>
   </body>
