--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!-- زر CTA -->
         <div class="mt-10" x-show="show" x-transition.opacity.duration.1800>
           <a
-            href="#download"
+            href="https://apps.apple.com/app/id6744749302"
             class="inline-block px-8 py-4 rounded-xl bg-gradient-to-r from-blue-500 to-indigo-600 text-lg font-bold shadow-xl hover:scale-105 transform transition"
           >
             جرّبه الآن 🚀
@@ -217,7 +217,7 @@
 
         <!-- زر التنزيل -->
         <a
-          href="https://apps.apple.com/app/idYOUR_APP_ID"
+          href="https://apps.apple.com/app/id6744749302"
           class="inline-block transform hover:scale-105 transition duration-300"
           x-show="show"
           x-transition.scale.duration.1000.delay-300
